@startuml

title __ELEVENTH's Class Diagram__\n

  namespace cn.shui.learning_plan.datastruct.eleventh {
    class cn.shui.learning_plan.datastruct.eleventh.L101 {
        + isSymmetric1()
        + isSymmetric2()
        - check()
        - help()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct.eleventh {
    class cn.shui.learning_plan.datastruct.eleventh.L101.TreeNode {
        ~ val : int
        ~ TreeNode()
        ~ TreeNode()
        ~ TreeNode()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct.eleventh {
    class cn.shui.learning_plan.datastruct.eleventh.L102 {
        + levelOrder()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct.eleventh {
    class cn.shui.learning_plan.datastruct.eleventh.L102.TreeNode {
        ~ val : int
        ~ TreeNode()
        ~ TreeNode()
        ~ TreeNode()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct.eleventh {
    class cn.shui.learning_plan.datastruct.eleventh.L104 {
        + maxDepth1()
        + maxDepth2()
    }
  }
  

  namespace cn.shui.learning_plan.datastruct.eleventh {
    class cn.shui.learning_plan.datastruct.eleventh.L104.TreeNode {
        ~ val : int
        ~ TreeNode()
        ~ TreeNode()
        ~ TreeNode()
    }
  }
  

  cn.shui.learning_plan.datastruct.eleventh.L101 +-down- cn.shui.learning_plan.datastruct.eleventh.L101.TreeNode
  cn.shui.learning_plan.datastruct.eleventh.L101.TreeNode o-- cn.shui.learning_plan.datastruct.eleventh.L101.TreeNode : left
  cn.shui.learning_plan.datastruct.eleventh.L101.TreeNode o-- cn.shui.learning_plan.datastruct.eleventh.L101.TreeNode : right
  cn.shui.learning_plan.datastruct.eleventh.L102 +-down- cn.shui.learning_plan.datastruct.eleventh.L102.TreeNode
  cn.shui.learning_plan.datastruct.eleventh.L102.TreeNode o-- cn.shui.learning_plan.datastruct.eleventh.L102.TreeNode : left
  cn.shui.learning_plan.datastruct.eleventh.L102.TreeNode o-- cn.shui.learning_plan.datastruct.eleventh.L102.TreeNode : right
  cn.shui.learning_plan.datastruct.eleventh.L104 +-down- cn.shui.learning_plan.datastruct.eleventh.L104.TreeNode
  cn.shui.learning_plan.datastruct.eleventh.L104.TreeNode o-- cn.shui.learning_plan.datastruct.eleventh.L104.TreeNode : left
  cn.shui.learning_plan.datastruct.eleventh.L104.TreeNode o-- cn.shui.learning_plan.datastruct.eleventh.L104.TreeNode : right


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
